# Metin2Docker

./: CMakeLists.txt  README.md
deploy/: .gitignore  README.md  docker-compose.yml
deploy/config/: auth.txt  db.txt  game99.txt
deploy/config/ch1/: first.txt  game1.txt  game2.txt
deploy/mysql/account/: account.MYI  account.frm  iptocountry.MYI  iptocountry.frm  mall_log.MYI  mall_log.frm  pay_log.MYI  pay_log.frm
deploy/mysql/common/: gmhost.MYI  gmhost.frm  gmlist.MYI  gmlist.frm  locale.MYD  locale.MYI  locale.frm  spam_db.MYI  spam_db.frm
deploy/mysql/log/: bootlog.MYD  bootlog.MYI  bootlog.frm  change_name.MYI  change_name.frm  command_log.MYI  command_log.frm  cube.MYI  cube.frm  dragon_slay_log.MYI  dragon_slay_log.frm  fish_log.MYI  fish_log.frm  goldlog.MYI  goldlog.frm  hack_crc_log.MYI  hack_crc_log.frm  hack_log.MYI  hack_log.frm  hackshield_log.MYI  hackshield_log.frm  levellog.MYI  levellog.frm  log.MYI  log.frm  loginlog.MYI  loginlog.frm  money_log.MYI  money_log.frm  pcbang_loginlog.MYI  pcbang_loginlog.frm  playercount.MYI  playercount.frm  quest_reward_log.MYI  quest_reward_log.frm  refinelog.MYI  refinelog.frm  shout_log.MYI  shout_log.frm  speed_hack.MYI  (+1 more)
deploy/mysql/mysql/: columns_priv.MYI  db.MYI  event.MYI  func.MYI  help_category.MYI  help_keyword.MYI  help_relation.MYI  help_topic.MYI  host.MYI  ndb_binlog_index.MYI  plugin.MYI  proc.MYI  procs_priv.MYI  proxies_priv.MYD  proxies_priv.MYI  servers.MYI  tables_priv.MYI  time_zone.MYI  time_zone_leap_second.MYI  time_zone_name.MYI  time_zone_transition.MYI  time_zone_transition_type.MYI  user.MYD  user.MYI
deploy/mysql/player/: affect.MYI  affect.frm  affect_copy.MYI  affect_copy.frm  banword.MYD  banword.MYI  banword.frm  change_empire.MYI  change_empire.frm  guild.MYI  guild.frm  guild_comment.MYI  guild_comment.frm  guild_grade.MYI  guild_grade.frm  guild_member.MYI  guild_member.frm  guild_war.MYI  guild_war.frm  guild_war_bet.MYI  guild_war_bet.frm  guild_war_reservation.MYI  guild_war_reservation.frm  horse_name.MYI  horse_name.frm  item.MYI  item.frm  item_attr.MYD  item_attr.MYI  item_attr.frm  item_attr_rare.frm  item_award.MYI  item_award.frm  item_proto.MYD  item_proto.MYI  item_proto.frm  land.MYI  land.frm  lotto_list.MYI  lotto_list.frm  (+47 more)
deploy/storage/: auto.cnf  metin2.code.err
deploy/storage/account/: account.MYD  account.MYI  account.frm  block_exception.MYI  block_exception.frm  gametime.MYI  gametime.frm  gametimeip.MYI  gametimeip.frm  gametimelog.MYI  gametimelog.frm  iptocountry.MYI  iptocountry.frm  string.MYI
deploy/storage/common/: gmhost.MYI  gmhost.frm  gmlist.MYD  gmlist.MYI  gmlist.frm  locale.MYD  locale.MYI  spam_db.MYI  spam_db.frm
deploy/storage/database/: account.sql  common.sql  log.sql  player.sql
deploy/storage/log/: bootlog.MYI  bootlog.frm  change_name.MYI  change_name.frm  command_log.MYI  command_log.frm  cube.MYI  cube.frm  dragon_slay_log.MYI  dragon_slay_log.frm  fish_log.MYI  fish_log.frm  goldlog.MYI  goldlog.frm  hack_crc_log.MYI  hack_crc_log.frm  hack_log.MYI  hack_log.frm  hackshield_log.MYI  hackshield_log.frm  levellog.MYI  levellog.frm  log.MYI  log.frm  loginlog.MYI  loginlog.frm  loginlog2.MYI  loginlog2.frm  money_log.MYI  money_log.frm  pcbang_loginlog.MYI  pcbang_loginlog.frm  playercount.MYI  playercount.frm  quest_reward_log.MYI  quest_reward_log.frm  refinelog.MYI  refinelog.frm  shout_log.MYI  shout_log.frm  (+2 more)
deploy/storage/mysql/: columns_priv.MYI  db.MYI  event.MYI  func.MYI  help_category.MYI  help_keyword.MYI  help_relation.MYI  help_topic.MYI  ndb_binlog_index.MYI  plugin.MYI  proc.MYI  procs_priv.MYI  proxies_priv.MYD  proxies_priv.MYI  servers.MYI  tables_priv.MYI  time_zone.MYI  time_zone_leap_second.MYI  time_zone_name.MYI  time_zone_transition.MYI  time_zone_transition_type.MYI  user.MYD  user.MYI
deploy/storage/player/: affect.MYD  affect.MYI  banword.MYD  banword.MYI  banword.frm  change_empire.MYI  change_empire.frm  guild.MYD  guild.MYI  guild.frm  guild_comment.MYI  guild_comment.frm  guild_grade.MYD  guild_grade.MYI  guild_grade.frm  guild_member.MYD  guild_member.MYI  guild_member.frm  guild_war.MYI  guild_war.frm  guild_war_bet.MYI  guild_war_bet.frm  guild_war_reservation.MYI  guild_war_reservation.frm  horse_name.MYI  horse_name.frm  item.MYD  item.MYI  item.frm  item_attr.MYD  item_attr.MYI  item_attr.frm  item_attr_rare.MYI  item_award.MYI  item_award.frm  item_proto.MYD  item_proto.MYI  item_proto.frm  land.MYD  land.MYI  (+56 more)
server/: .dockerignore  Dockerfile
server/src/libgame/: CMakeLists.txt
server/src/libgame/src/: attribute.cc  grid.cc
server/src/liblua/: CMakeLists.txt
server/src/libsql/: CMakeLists.txt
server/src/libsql/include/: CAsyncSQL.h  libsql.h
server/src/libsql/src/: CStatement.cpp
server/src/libthecore/: CMakeLists.txt
server/src/libthecore/include/: buffer.h  typedef.h  utils.h
server/src/libthecore/src/: utils.cpp
server/src/quest/: CMakeLists.txt
server/src/quest/src/: crc32.cc
src/common/: building.h  length.h  service.h  tables.h
src/db/: CMakeLists.txt
src/db/src/: AuctionManager.cpp  Cache.cpp  Cache.h  ClientManager.cpp  ClientManagerBoot.cpp  ClientManagerEventFlag.cpp  ClientManagerLogin.cpp  ClientManagerParty.cpp  DBManager.cpp  DBManager.h  GuildManager.cpp  ItemIDRangeManager.h  Main.cpp  Monarch.cpp  Peer.h  PeerBase.cpp  PeerBase.h  ProtoReader.cpp  grid.cpp
src/game/: CMakeLists.txt
src/game/src/: BlueDragon_Binder.cpp  BlueDragon_Skill.h  ClientPackageCryptInfo.cpp  DragonLair.h  DragonSoul.cpp  MarkConvert.cpp  MarkImage.cpp  PetSystem.cpp  SpeedServer.h  affect.h  auction_manager.h  battle.cpp  battle.h  blend_item.cpp  block_country.cpp  buff_on_attributes.cpp  castle.cpp  char_affect.cpp  char_horse.cpp  char_manager.h  char_skill.cpp  char_state.cpp  cmd_general.cpp  config.h  constants.cpp  constants.h  crc32.h  db.cpp  desc_client.cpp  desc_client.h  desc_manager.cpp  desc_p2p.cpp  empire_text_convert.cpp  entity_view.cpp  event_queue.cpp  exchange.cpp  fifo_allocator.h  group_text_parse_tree.h  guild.cpp  guild_war.cpp  (+63 more)
(+185 files in other folders)
